k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PLACEHOLDER-NAME
  namespace: nutri-veda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: PLACEHOLDER-NAME
  template:
    metadata:
      labels:
        app: PLACEHOLDER-NAME
    spec:
      automountServiceAccountToken: false
      containers:
      - name: PLACEHOLDER-NAME
        image: PLACEHOLDER-IMAGE:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "256Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: PLACEHOLDER-NAME
  namespace: nutri-veda
spec:
  selector:
    app: PLACEHOLDER-NAME
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
